# space_rust

./: BUCKETLIST.md  CONCEPTION_CEINTURES.md  CONCEPTION_GAZEUSES_V2.md  CONCEPTION_PLANETES.md  CONCEPTION_STARMAP.md  CONCEPTION_SYSTEMES_MULTIPLES.md  Cargo.toml  GAZEUSES_BUCKETLIST.md  NOISES_GAZEUSES.md  PLANET_BUCKETLIST.md  README.md  STELLAIRE_BUCKETLIST.md  bilan_travaux.md  conception_planete_v2.md  presets.json
docs/: iss_reference.md  stations_fondations.md  stations_procedurales.md  stations_raccordement.md
src/: astre.rs  camera.rs  etoile.rs  fond.rs  impostor.rs  main.rs  orbite.rs  police.rs  rendu.rs  stabilite.rs  stellaire.rs  ui.rs
src/ceinture/: config.rs  mod.rs  rendu.rs
src/disque/: config.rs  mod.rs  voile.rs
src/ecran/: accueil.rs  briques.rs  galerie.rs  galerie_disques.rs  galerie_etoiles.rs  mod.rs  objet.rs  skymap.rs  starmap.rs  station.rs  vaisseaux.rs  widgets.rs
src/genese/: apparences.rs  mod.rs  persistance.rs  presets.rs  taille.rs
src/menu/: dessin.rs  mod.rs
src/planete/: anneau.rs  apparence.rs  materiau.rs  mod.rs  palette.rs  terrain.rs  vortex.rs  zonal.rs
src/shaders/: disque_particules.frag.glsl  disque_particules.vert.glsl  disque_voile.frag.glsl  disque_voile.vert.glsl  fond.frag.glsl  fond.vert.glsl  impostor.vert.glsl  planete.frag.glsl  planete_anneau.vert.glsl  soleil.frag.glsl  soleil_plasma.frag.glsl  soleil_plasma.vert.glsl
src/soleil/: eruptions.rs  materiau.rs  mod.rs  rendu.rs
src/starmap/: mod.rs  rendu.rs
src/systeme/: gravite.rs  mod.rs  rendu.rs
src/vaisseau/: assemblage.rs  chantier.rs  (+21 more)
