[package]
name = "solar_game"
version = "0.1.0"
edition = "2021"
default-run = "solar_game"

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# La génération de terrain (bruit CPU) est 5-10× trop lente sans optimisations :
# on optimise légèrement même en debug (le débogage reste utilisable).
[profile.dev]
opt-level = 1
